# infectious-disease-models

./: .gitignore  .gitmessage  .pre-commit-config.yaml  404.html  README.md  SEIRS-simulation.py  SIR-simulation.py  config.yaml  general_model.py  index.html  mkdocs.yml  pyproject.toml
analysis/methodology/: index.html
architecture/: index.html
config/: index.html
configuration/yaml_config/: index.html
configuration/yaml_confiig/: index.html
data/dataset-description/: index.html
data/exploratory-analysis/: index.html
debugging/improvements/: index.html
debugging/issues_encountered/: index.html
dev/: index.html
dev/calibration/: index.html
dev/model/: index.html
dev/plotting/: index.html
docs/: fitting.md  future.md  index.md  install.md  mcmc.md  mkdocs.yml  noise.md  references.md  results.md
docs/analysis/: methodology.md
docs/configuration/: yaml_config.md  yaml_confiig.md
docs/data/: dataset-description.md  exploratory-analysis.md
docs/debugging/: improvements.md  issues_encountered.md
docs/dev/: calibration.md  index.md  model.md  plotting.md
docs/experiments/: model-evaluation.md  overview.md
docs/features/: advanced_features.md  extensibility.md  outputs.md
docs/models/: TB_Ayinla_2021.md  TB_Kuddus_2022.md  TB_Sulayman_2021.md  (+5 more)
fitting/: index.html
future/: index.html
install/: index.html
mcmc/: index.html
noise/: index.html
references/: index.html
results/: index.html
search/: search_index.json
simulation/: index.html
tests/: test_calibration.py  test_model.py  test_plotting.py
usage/: index.html
(+31 files in other folders)
